# swri_console

./: CMakeLists.txt
include/swri_console/: bag_source.h  bag_source_backend.h  color_widget.h  console_master.h  console_window.h  constants.h  database_view.h  log.h  log_database.h  log_database_proxy_model.h  log_filter.h  log_list_model.h  log_list_widget.h  log_origin.h  log_prototype.h  log_widget.h  log_writer.h  node_list_model.h  node_list_widget.h  ros_source.h  ros_source_backend.h  run_list_widget.h  save_file_dialog.h  session.h  session_list_delegate.h  session_list_model.h  session_list_widget.h  settings_keys.h
src/: bag_source.cpp  bag_source_backend.cpp  collect_rosout_bags.cpp  color_widget.cpp  console_master.cpp  console_window.cpp  log.cpp  log_database.cpp  log_database_proxy_model.cpp  log_filter.cpp  log_list_model.cpp  log_list_widget.cpp  log_widget.cpp  log_writer.cpp  main.cpp  node_list_model.cpp  node_list_widget.cpp  register_meta_types.cpp  ros_source.cpp  ros_source_backend.cpp  run_list_widget.cpp  save_file_dialog.cpp  session.cpp  session_list_delegate.cpp  session_list_model.cpp  session_list_widget.cpp  settings_keys.cpp
ui/: console_window.ui
